과제2: Python 프로그래밍

--- a/hw1_receipt.ipynb
+++ b/hw1_receipt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,86 +11,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#1~2 lovey_loveseat 정보 및 가격\n",
+    "\n",
     "lovely_loveseat_description = \"Lovely Loveseat. Tufted polyester blend on wood. 32 inches high x 40 inches wide x 30 inches deep. Red or white.\"\n",
     "lovely_loveseat_price = 254.00"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#3~4 Stylish_Settee 정보 및 가격\n",
+    "\n",
     "stylish_settee_description = \"Stylish Settee. Faux leather on birch. 29.50 inches high x 54.75 inches wide x 28 inches deep. Black.\"\n",
     "stylish_settee_price = 180.50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#5~6 Luxurious Lamp 정보 및 가격\n",
+    "\n",
     "luxurious_lamp_description = \"Luxurious Lamp. Glass and iron. 36 inches tall. Brown with cream shade.\"\n",
     "luxurious_lamp_price = 52.15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#7 세금 정보\n",
+    "\n",
     "sales_tax = 0.088"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#8~9 고객 정보 초기화\n",
+    "\n",
     "customer_one_total = 0\n",
     "customer_one_itemization = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#10~11 고객이 lovely_loveseat 구매\n",
+    "\n",
     "customer_one_total += lovely_loveseat_price\n",
     "customer_one_itemization += lovely_loveseat_description"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#12~13 고객이 Luxurious_Lamp 구매\n",
+    "\n",
     "customer_one_total += luxurious_lamp_price\n",
     "customer_one_itemization += luxurious_lamp_description"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#14~15 세금 계산 및 총 합계\n",
+    "\n",
     "customer_one_tax = customer_one_total * sales_tax\n",
     "customer_one_total += customer_one_tax"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -105,6 +121,8 @@
     }
    ],
    "source": [
+    "#15 출력\n",
+    "\n",
     "print(\"고객의 아이템:\")\n",
     "print(customer_one_itemization)\n",
     "print(\"고객의 아이템 총 합계\")\n",
