--- a/hw2_gradebook.ipynb
+++ b/hw2_gradebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,28 +11,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#1 과목 리스트\n",
+    "\n",
     "subjects = [\"physics\", \"calculus\", \"poetry\", \"history\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#2 점수 리스트\n",
+    "\n",
     "grades = [98, 97, 85, 88]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#3  gradbook 생성\n",
+    "\n",
     "gradebook = [\n",
     "    [\"physics\", 98],\n",
     "    [\"calculus\", 97],\n",
@@ -43,64 +49,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[['physics', 98],\n",
-       " ['calculus', 97],\n",
-       " ['poetry', 'Pass', 'Pass'],\n",
-       " ['history', 88],\n",
-       " ['computer science', 100],\n",
-       " ['visual arts', 93],\n",
-       " ['visual arts', 98],\n",
-       " ['visual arts', 93]]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['physics', 98], ['calculus', 97], ['poetry', 85], ['history', 88]]\n"
+     ]
     }
    ],
    "source": [
+    "#4 gradebook 출력\n",
+    "\n",
     "print(gradebook)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['physics', 98], ['calculus', 97], ['poetry', 85], ['history', 88], ['computer science', 100]]\n"
+     ]
+    }
+   ],
    "source": [
-    "gradebook.append([\"computer science\", 100])"
+    "#5 컴퓨터 과학 점수 추가\n",
+    "\n",
+    "gradebook.append([\"computer science\", 100])\n",
+    "\n",
+    "print(gradebook)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[['physics', 98],\n",
-       " ['calculus', 97],\n",
-       " ['poetry', 'Pass', 'Pass'],\n",
-       " ['history', 88],\n",
-       " ['computer science', 100],\n",
-       " ['visual arts', 93],\n",
-       " ['visual arts', 98],\n",
-       " ['visual arts', 93]]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['physics', 98], ['calculus', 97], ['poetry', 85], ['history', 88], ['computer science', 100], ['visual arts', 93]]\n"
+     ]
     }
    ],
    "source": [
+    "#6 비주얼 아트 추가\n",
+    "\n",
     "gradebook.append([\"visual arts\", 93])\n",
     "\n",
     "print(gradebook)"
@@ -108,64 +110,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gradebook[-1][1] += 5  # 마지막 항목이 visual arts이므로 [-1] 사용"
+    "#7 비주얼 아트 점수 +5\n",
+    "\n",
+    "gradebook[-1][1] += 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gradebook[2].remove(85)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "점수 수정 및 Pass/Fail 반영 후 gradebook:\n",
-      "[['physics', 98], ['calculus', 97], ['poetry', 'Pass', 'Pass'], ['history', 88], ['computer science', 100], ['visual arts', 93], ['visual arts', 98]]\n"
+      "[['physics', 98], ['calculus', 97], ['poetry'], ['history', 88], ['computer science', 100], ['visual arts', 98]]\n"
      ]
     }
    ],
    "source": [
-    "gradebook[2].append(\"Pass\")\n",
+    "#8 poetry 점수 제거\n",
     "\n",
-    "print(\"\\n점수 수정 및 Pass/Fail 반영 후 gradebook:\")\n",
+    "gradebook[2].remove(85)\n",
+    "\n",
     "print(gradebook)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "전체 gradebook:\n",
-      "[['politics', 80], ['latin', 96], ['dance', 97], ['architecture', 65], ['physics', 98], ['calculus', 97], ['poetry', 'Pass', 'Pass'], ['history', 88], ['computer science', 100], ['visual arts', 93], ['visual arts', 98]]\n"
+      "[['physics', 98], ['calculus', 97], ['poetry', 'Pass'], ['history', 88], ['computer science', 100], ['visual arts', 98]]\n"
      ]
     }
    ],
    "source": [
+    "#9 poetry에 pass추가\n",
+    "\n",
+    "gradebook[2].append(\"Pass\")\n",
+    "\n",
+    "print(gradebook)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['politics', 80], ['latin', 96], ['dance', 97], ['architecture', 65], ['physics', 98], ['calculus', 97], ['poetry', 'Pass'], ['history', 88], ['computer science', 100], ['visual arts', 98]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#10 지난 학기 gradebook과 합치기\n",
+    "\n",
     "last_semester_gradebook = [[\"politics\", 80], [\"latin\", 96], [\"dance\", 97], [\"architecture\", 65]]\n",
     "full_gradebook = last_semester_gradebook + gradebook\n",
     "\n",
-    "print(\"\\n전체 gradebook:\")\n",
     "print(full_gradebook)"
    ]
   }
